--- a/zip.nuspec
+++ b/zip.nuspec
@@ -21,6 +21,8 @@
     <file src="Debug\zip.pdb" target="build\native\lib\Win32\v142\Debug"/>
     <file src="Release\zip.dll" target="build\native\bin\Win32\v142\Release"/>
     <file src="Release\zip.lib" target="build\native\lib\Win32\v142\Release"/>
+    <file src="zip.targets" target="build\native"/>
+    <file src="zip-propertiesui.xml" target="build\native"/>
     <file src="zip.h" target="build\native\include"/>
     <file src="README.md" target="build"/>
     <file src="README.md" target="build\native\doc"/>
