--- a/.github/workflows/nuget-windows-build.yml
+++ b/.github/workflows/nuget-windows-build.yml
@@ -13,6 +13,7 @@ jobs:
     - name: Build
       run: |
         cmake --build . --config "Debug"
+        cmake --build . --config "Debug" -DBUILD_SHARED_LIBS=ON
         tree /a /f .
     - name: Test
       run: ctest -VV -C "Debug"
@@ -31,6 +32,7 @@ jobs:
     - name: Build
       run: |
         cmake --build . --config "Release"
+        cmake --build . --config "Release" -DBUILD_SHARED_LIBS=ON
         tree /a /f .
     - name: Test
       run: ctest -VV -C "Release"
@@ -56,6 +58,7 @@ jobs:
         move windows-msvc-debug\* Debug\
         move windows-msvc-release\* Release\
         move src\zip.h zip.h
+        
     - name: Create nuget package
       working-directory: ${{env.GITHUB_WORKSPACE}}
       run: nuget pack zip.nuspec
