--- a/.github/workflows/nuget-windows-build.yml
+++ b/.github/workflows/nuget-windows-build.yml
@@ -71,6 +71,6 @@ jobs:
     - name: Set up NuGet source
       run: nuget sources add -Source https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json -Name github -Username ${{ github.repository_owner }} -Password ${{ github.token }} -StorePasswordInClearText
     - name: Publish NuGet to GitHub registry
-      run: nuget push *.nupkg -Source github -SkipDuplicate -NoSymbols 
+      run: nuget push *.nupkg -Source github -NoSymbols 
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}     
